<resources>
    <string name="app_name">UniSentiment</string>
    <!-- String de permisão das autorizações do android -->
    <string name="autorizacao_acesso_dados_de_uso">Autorização para obter dados do dispositivo.</string>
    <string name="autorizacao_acesso_dados_de_uso_descricao">
        Essa autorização e necessária para obter o histórico de consumo de ‘internet’ do dispositivo
        no tempo em que esteve conectado a uma rede Wi-Fi.
    </string>
    <string name="permisao_acesso_telefone">Autorização para obter dados da rede de telefonia móvel.</string>
    <string name="permisao_acesso_telefone_descricao">
        Essa permissão e necessária para obter os dados de utilização de redes móveis. 
        Caso não seja concedida, os dados referentes a utilização de rede móvel não será coletado.
    </string>
    <string name="permission_authorize">Autorizar</string>
    <!-- Nomes botoes activity prinipal -->
    <string name="btn_net_usage">Ver uso de internet.</string>
    <string name="btResultadoClassificador">Resultado final.</string>
    <string name="btHelpUsoInternetDescription">Uso de internet do celular.</string>
    <string name="btHelpResultadoLexicoDescription">Resultado léxico.</string>
    <string name="btHelpResultadoFinalDescription">Resultado obtido.</string>

    <string name="btAjudaUsoDeInternet">
        Aqui está o resultado da captura de dados pela internet. Caso não tenha nenhum dado informado, verifique se o serviço de captura está
        ativo e foi dada as autorizações de acesso a serviço de telefone, que e responsável por fornecer acesso os dados móveis usados,
        e autorização de acesso aos dados do telefone, que é responsável por fornece acesso aos dados de uso de WI-FI.
    </string>

    <string name="btAjudaResultadoLexico">
        Aqui está o resultado da análise léxica de cada sentença analisada.
    </string>
    <string name="btAjudaResultadoFinal">
        Aqui está o resultado da análise, isto é, quando e definido o intervalo de tempo da análise, e feita a análise das mensagens
        e então e definido o sentimento do usuário no intervalo indicado, o consumo de dados de internet nesse tempo, no
        modelo já definido para análise destes dados.
    </string>

    <!-- Nomes activity netusage -->
    <string name="bt_reload">Recarregar</string>
    <string name="time">Tempo: %d minutos.</string>
    <string name="tx_wifi">Wi-Fi: %s.</string>
    <string name="tx_mobile">Mobile: %s.</string>
    <string name="tx_total">Total: %s</string>
    <string name="dt_fim">Fim: %s</string>
    <string name="dt_inicio">Inicio: %s</string>

    <!-- Nomes activity lexico_result -->
    <string name="tx_lexico_desc">Frases processadas pelo léxico.</string>
    <string name="bt_lexico_result">Ver resultado do léxico.</string>
    <string name="tx_result_ls">Sentimento: %s</string>

    <!-- Strings activity_resultado_final -->
    <string name="tx_sentimento">Sentimento: %s</string>
    <string name="title_activity_recebe_conversa_exportada_whatsapp">
        Mensagens recebidas
    </string>

    <string name="bt_ajuda_aplicativo">Sobre Aplicativo</string>
    <string name="escolha_nome">Escolha seu nome abaixo:</string>
    <string name="btAjudaAplicativo">
        Esse aplicativo foi desenvolvido para poder realizar análise léxica das mensagens enviadas pelo WhatsApp.
        Capturar quantidade de trafego de dados recebidos/transmitidos no horário e intervalo estipulado pelo usuário,
        e então poder traçar um perfil que relaciona o sentimento do usuário em Positivo e Negativo e
        o seu consumo de internet.
    </string>

    <string name="ic_help_menu">Ajuda</string>
    <string name="ic_contato_menu">Participar da Pesquisa</string>
    <string name="contato_descricao">Para poder participar da pesquisa é fácil, envie um email para vcmborges@ufg.br dizendo que deseja participar da pesquisa!</string>
    <string name="bt_contato">Enviar Email</string>
    <string name="contato_participar">
        Olá, gostaria de participar da pesquisa!
    </string>
    <string name="email_padrao">vcmborges@ufg.br</string>
    <string name="aplicativoEmailNaoInstalado">
        Por favor, instale um aplicativo de email para poder enviar os dados.
    </string>

    <string name="ajuda_tela_mensagens_exportada">
        Nessa tela e mostrada as mensagens que você selecionou para realizar a analise léxica. Para prosseguir,
        você deve selecionar o botão que corresponde ao seu nome de usuário, então a análise ira iniciar, e apos
        finalizar sera levado a tela inicial da aplicação, onde poderá ver os resultados da análise, ver seu consumo
        de internet no período das mensagens (baseado na utilidadeData de envio de cada mensagem) e poder enviar os resultados para análise.
    </string>

    <string name="btIniciaAnalize">Iniciar Análise</string>
    <string name="tutorial">Como usar o aplicativo</string>
    <string name="tempo_execucao">Selecione o tempo de captura dos dados de internet.</string>
    <string name="bt_proximo">Proximo</string>
    <string name="bt_voltar">Voltar</string>

    <string name="parte_um_frag">
        Seja bem-vindo ao UniSentiment. Esse aplicativo foi desenvolvido para auxílio a uma pesquisa que visa associar o sentimento do
        usuário com seu consumo de dados na Internet Móvel e Sem Fio. Isso é feito analisando as mensagens de WhatsApp que são enviadas
        pelo usuário e contabilizando os seus dados consumidos (download+upload) nas redes móveis e sem fio nas quais o dispositivo
        esteve conectado.
        Para  participar da pesquisa é obrigatório enviar um e-mail ao pesquisador responsável (vcmborges@ufg.br), dizendo que deseja
        participar da pesquisa de perfil de usuários móveis, em seguida o pesquisador responsável irá enviar de volta o duas cópias do
        Termo de Consentimento Livre e Esclarecido (TCLE) assinado e rubricado para a sua anuência.    Assine e rubrique todas as folhas
        do TCLE e envie uma cópia para o e-mail do pesquisador responsável.  Informamos ser possível, a qualquer momento e sem nenhum
        prejuízo, a retirada do consentimento de utilização dos dados do participante da pesquisa, basta o participante enviar um
        e-mail requisitando a retirada do consentimento. Enfatizamos a importância do participante de pesquisa guardar em seus arquivos
        uma cópia do TCLE. Clique no botão abaixo para enviar o e-mail de um aplicativo do seu smartphone.
    </string>

    <!-- Tutorial tela como usar o aplicativo -->
    <string name="comoUsar">Como funciona?</string>
    <string name="comoFuncionaExpliccao">
        A análise das mensagens é feita usando o algoritmo Léxico, com isso as mensagens são classificadas como sendo Positivas ou Negativas.
    </string>
    <string name="comoExportarMensagens">
        Como o aplicativo tem acesso as mensagens?
    </string>
    <string name="exportarMsg1">
        Para isso, você deve abrir o WhatsApp escolher uma conversa que será então exportada para o aplicativo. Ir nas opções da conversa.
    </string>
    <string name="exportarMsg2">
        Escolher a opção mais.
    </string>
    <string name="exortarMsg3">
        Após, devera escolher exportar mensagens, e quando perguntar escolha sem mídia.
    </string>
    <string name="exportarMsg4">
        Agora, ira mostrar uma lista de aplicativos que é possível enviar os dados das mensagens. Escolha o aplicativo UniSentiment.
    </string>
    <string name="exportarMsg5">
        Esta e a tela com as mensagens que foram enviadas ao aplicativo. Aqui é possível ler as mensagens enviadas, quem enviou e a hora que foi enviada.
    </string>
    <string name="exportarMsg6">
        Ao clicar em iniciar análise, será pedido as autorizações caso não tenham sido dadas anteriormente. Nas próximas telas e falado mais sobre elas.
    </string>

    <string name="acessoDadosWiFi">Acesso aos dados Wi-Fi.</string>

    <string name="autorizacao_wifi">
        Sem essa permissão não será possível coletar os dados recebidos e transmitidos pelo Wi-Fi, que e essencial para a pesquisa.
        Essa autorização pode ser fornecida nesse momento clicando no botão abaixo. Caso não seja fornecida, será requisitada ao iniciar a execução do léxico.
        Sem essa autorização, a análise não será executada.
    </string>

    <string name="botaoAutorizarWiFi">Autorizar Wi-Fi</string>
    <string name="botaoAutorizarDadosMoveis">Autorizar dados móveis</string>
    <string name="autorizarDadosMoveisTitulo">Acesso a dados internet móvel</string>
    <string name="autorizarDadosMoveisExplicacao">
        Sem essa permissão não será possível coletar os dados recebidos e transmitidos pela rede móvel, que e essencial para a pesquisa.
        Essa autorização pode ser fornecida nesse momento clicando no botão abaixo. Caso não seja fornecida, será requisitada ao iniciar a execução do léxico.
        Sem essa autorização, a análise não será executada.
    </string>

    <string name="tempoCapturaDadosRede">Aqui, deve ser configurado o intervalo de coleta do consumo de internet, tanto pelo Wi-Fi quanto dos dados móveis.</string>
    <string-array name="intervalos_captura_dados_rede">
        <item>15 Minutos</item>
        <item>30 Minutos</item>
        <item>45 Minutos</item>
        <item>1 Hora</item>
        <item>2 Horas</item>
        <item>4 Horas</item>
        <item>8 Horas</item>
    </string-array>

    <string name="tx_identificador_usuario">
        Para finalizar, ao solicitar participar da pesquisa, você deve ter recebido um identificador único, logo digite esse
        identificador abaixo, ele servirá apenas para identificar o resultado produzido. Em nenhum momento nenhuma mensagem
        sua será enviada para nós. Apenas os resultados finais, que será a utilidadeData da execução do algorítimo, a soma do uso
        de internet, pelo Wi-Fi e dados móveis. Caso ainda não tenha essa identificação, poderá ser dada ao realizar
        a análise das mensagens.
    </string>
    <string name="CodigoHint">Insira o código de participação</string>
    <string name="nao_pode_gravar_configuracoes">
        Não pode finalizar sem inserir um identificador de usuário.
    </string>
    <string name="edtIdentificadorUsuarioHint">Insira aqui seu identificador</string>
    <string name="btAutorizarAplicacao">Autorizar aplicação</string>
    <string name="btConfgIntervaloCapturaDadosRedes">Configurar intervalo de coleta de consumo de internet</string>
    <string name="btFinalizarConfiguracao">Finalizar Configuração.</string>

    <string name="dataMinimaMensagensAnalisadas">
        Escolher a opção da quantidade de  ultimas dias  a ser considerado  como histórico para análise de mensagens:
    </string>
    <string name="diasParaAnalise">Dias a ser considerados</string>
    <string-array name="diasMinimosParaAnalisar">
        <item>1 dia</item>
        <item>2 dias</item>
        <item>4 dias</item>
        <item>1 semana</item>
        <item>2 semanas</item>
    </string-array>

</resources>
