<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.tutoriais.TutorialComoUsarFragment">

    <TextView
        android:id="@+id/tituloPag"
        style="@style/padraoTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/comoUsar"
        android:textSize="@dimen/tamanhoTituloTutorial"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        />

    <TextView
        android:id="@+id/explicacao"
        style="@style/padraoTexto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_below="@id/tituloPag"
        android:text="@string/comoFuncionaExpliccao"
        android:textSize="@dimen/tamanhoTextoTutorial" />

    <TextView

        android:id="@+id/terAcessoMsg"
        style="@style/padraoTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/comoExportarMensagens"
        android:textSize="@dimen/tamanhoTituloTutorial"
        android:textAlignment="center"
        android:layout_below="@id/explicacao"/>

    <ImageView
        android:id="@+id/imgP1"
        android:layout_width="120dp"
        android:layout_height="160dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/parte_um"
        android:layout_below="@id/terAcessoMsg"
        style="@style/padraoTexto"
        />
    <TextView
        android:id="@+id/textView7"
        style="@style/padraoTexto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|left"
        android:text="@string/exportarMsg1"
        android:textSize="@dimen/tamanhoTextoTutorial"
        android:layout_below="@id/terAcessoMsg"
        android:layout_toEndOf="@id/imgP1"
        android:layout_marginTop="@dimen/large_margin"/>

    <ImageView
        android:id="@+id/imgP2"
        android:layout_width="120dp"
        android:layout_height="160dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/parte_dois"
        android:layout_below="@id/imgP1"
        android:layout_alignParentEnd="true"/>
    <TextView
        android:id="@+id/txP2"
        style="@style/padraoTexto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|right"
        android:text="@string/exportarMsg2"
        android:textSize="@dimen/tamanhoTextoTutorial"
        android:layout_below="@id/imgP1"
        android:layout_toLeftOf="@id/imgP2"
        android:layout_marginTop="@dimen/large_margin"/>

    <ImageView
        android:id="@+id/imgP3"
        android:layout_width="120dp"
        android:layout_height="160dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/parte_tres"
        android:layout_below="@id/imgP2"
        android:layout_alignParentStart="true"/>
    <TextView
        android:id="@+id/txP3"
        style="@style/padraoTexto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exortarMsg3"
        android:textSize="@dimen/tamanhoTextoTutorial"
        android:layout_below="@id/imgP2"
        android:layout_toRightOf="@id/imgP3"
        android:layout_marginTop="@dimen/large_margin" />

    <ImageView
        android:id="@+id/imgP4"
        android:layout_width="120dp"
        android:layout_height="160dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/parte_quatro"
        android:layout_below="@id/imgP3"
        android:layout_alignParentEnd="true"/>
    <TextView
        android:id="@+id/txP4"
        style="@style/padraoTexto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exportarMsg4"
        android:textSize="@dimen/tamanhoTextoTutorial"
        android:textAlignment="textEnd"
        android:layout_below="@id/imgP3"
        android:layout_toLeftOf="@id/imgP4"
        android:layout_marginTop="@dimen/large_margin" />

    <ImageView
        android:id="@+id/imgP5"
        android:layout_width="120dp"
        android:layout_height="160dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/parte_cinco"
        android:layout_below="@id/imgP4"
        android:layout_alignParentStart="true"/>
    <TextView
        android:id="@+id/txP5"
        style="@style/padraoTexto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exportarMsg5"
        android:textSize="@dimen/tamanhoTextoTutorial"
        android:layout_below="@id/imgP4"
        android:layout_toRightOf="@id/imgP5"
        android:layout_marginTop="@dimen/large_margin" />

    <TextView
        android:id="@+id/txP6"
        style="@style/padraoTexto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exportarMsg5"
        android:textSize="@dimen/tamanhoTextoTutorial"
        android:layout_below="@id/imgP4"
        android:layout_toRightOf="@id/imgP5"
        android:layout_marginTop="@dimen/large_margin" />

    <TextView
        android:id="@+id/txP7"
        style="@style/padraoTexto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exportarMsg6"
        android:textSize="@dimen/tamanhoTextoTutorial"
        android:layout_below="@id/imgP5"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/large_margin" />

</RelativeLayout>
</ScrollView>